<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffffff"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">


    <FrameLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/x20"
        android:paddingTop="@dimen/x20">

        <TextView
            android:id="@+id/bookDetailShareTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_default_dark"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@drawable/common_icon_share"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:text="@string/common_book_details_share"
            android:textColor="@color/color_ff000000"
            android:textSize="@dimen/x38" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/x20"
        android:paddingTop="@dimen/x20">

        <TextView
            android:id="@+id/bookDetailCatalogueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_default_dark"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@drawable/common_icon_"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:text="@string/common_book_details_catalogue"
            android:textColor="@color/color_ff000000"
            android:textSize="@dimen/x38" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/x30"
        android:paddingTop="@dimen/x30">

        <TextView
            android:id="@+id/bookDetailLikeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_default_dark"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@drawable/common_btn_like"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:text="@string/common_book_details_like"
            android:textColor="@color/color_ff000000"
            android:textSize="@dimen/x38" />
    </FrameLayout>

</LinearLayout>